tests/neg-macros/i17545a/Test_2.scala
case object WhateverA

def testA =
  val whateverA: WhateverA.type = InvokeConstructor[WhateverA.type] // error
